--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
              <a href="Aula24-01-FormataçãodetextocomCSS/inicio.html" title="clique e vá para página" target="_blank" >Aula24-01-FormataçãodetextocomCSS</a> <br>
              <a href="Dever-02-21-01/inicio.html" title="clique e vá para página" target="_blank" >Dever-02-21-01</a> <br>
              <a href="Dever-01-14-01/inicio.html" title="clique e vá para página" target="_blank" >Dever-01-14-01</a> <br>
+             <a href="dever/index.html" title="clique e vá para página" target="_blank" >Dever</a> <br>
           
 
         </body>
